Prevent menu overflow

--- a/seven-wonders/style.css
+++ b/seven-wonders/style.css
@@ -16,7 +16,7 @@ h1 {
     top: 30px;
     right: calc(0px - var(--menuWidth));
     background-color: rgba(0,0,0,0.8);
-    height: 100%;
+    height: calc(100% - 30px);
     border-top-left-radius: 20px;
     transition-duration: .5s;
     transition-timing-function: ease-in-out;
